css work,addLesson unshift()= login fix

--- a/css/main.css
+++ b/css/main.css
@@ -89,10 +89,11 @@ body{
   margin: 0 auto;
   background-color: rgba(34, 10, 5, 0.49);
   color: white;
-  width: 600px;
+  width: 99%;
   border: 1px solid white;
-  border-radius: 13px;
-  padding:  0.3em .4em;
+  border-top-left-radius: 55px;
+  border-top-right-radius:55px;
+  padding:  1.1em 0;
   text-align: center;
 }
 
@@ -157,6 +158,7 @@ body{
   border: 0.08em solid #9191BA;
   border-radius:  .5em 0 0 .5em;
   border-right: 0;
+  padding-left: 5px;
 }
 
 .new-lessons-container >  * {
